modifications to add instructions

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="./css/ref/bootstrap.min.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/firework.css">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
