Ability to create multiple puzzle size levels

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>15 Puzzle Game</title>
+    <title>Puzzle Game</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=500px, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="./scripts/ref/jquery.min.js"></script>
     <script src="./scripts/ref/bootstrap.min.js"></script>
